2009-09-25  Peter Bloomfield

	* libbalsa/mailbox_mbox.c (lbm_mbox_prepare_object),
	(lbm_mbox_armored_object): detect when g_mime_multipart_foreach
	will recursively descend into a signed or encrypted multipart,
	and set a counter to skip the parts that should not be changed.

2009-09-24  Peter Bloomfield

	* src/balsa-app.c (append_url_if_open): use a GPtrArray to
	collect URLs instead of a GString;
	(open_mailboxes_idle_cb): ditto; do not leak urls.

2009-09-24  Peter Bloomfield

	* src/balsa-app.c (open_mailboxes_idle_cb): do not open most
	recent mailbox if no mailboxes were open.

2009-09-24  Peter Bloomfield

	* src/balsa-app.c (open_mailbox_by_url),
	(open_mailboxes_idle_cb): respect current-mailbox-url when -o
	command line option is used.
	* src/main-window.c: do not clear current-mailbox-url when last
	mailbox is closed, as it may get saved that way.
	* src/main.c (initial_open_inbox): open inbox hidden.

2009-09-11  Peter Bloomfield

	Open most recent mailbox first on restart

	* libbalsa/libbalsa-marshal.list: new marshaller.
	* src/balsa-app.h: new member current_mailbox_url.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore it.
	* src/main-window.h: new api for open-mbnode class method.
	* src/balsa-mblist.h: new method balsa_mblist_open_mailbox_hidden;
	* src/balsa-app.c (open_mailboxes_idle_cb): use them.
	* src/balsa-index.c (balsa_index_transfer): ditto.
	* src/balsa-mblist.c (bmbl_open_mailbox),
	(balsa_mblist_open_mailbox), (balsa_mblist_open_mailbox_hidden):
	ditto.
	* src/mailbox-node.c (load_mailbox_view): ditto.
	* src/main-window.c: ditto.

2009-09-11  Peter Bloomfield

	* src/mailbox-conf.c (mailbox_conf_set_values):
	initialize mailbox name for local mailbox;
	(local_mailbox_dialog_cb), (create_local_mailbox_dialog):
	catch file chooser events to check for a real change;
	(create_imap_mailbox_dialog), (mailbox_conf_view_new_full),
	(mailbox_conf_view_new): new api.

2009-09-10  Peter Bloomfield
